[project]
name = "audioflow2mqtt"
version = "0.8.1"
description = "Audioflow speaker switch to MQTT gateway with Home Assistant discovery"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiomqtt>=2.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "pre-commit>=4.6.0",
    "mypy>=2.1.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "ASYNC", "B", "UP", "SIM", "C4"]
# Line length is enforced by the formatter; long strings/URLs are exempt.
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["audioflow2mqtt"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

# All package modules are held to full annotation coverage.
[[tool.mypy.overrides]]
module = [
    "audioflow2mqtt.config",
    "audioflow2mqtt.parsing",
    "audioflow2mqtt.health",
    "audioflow2mqtt.device",
    "audioflow2mqtt.mqtt",
    "audioflow2mqtt.publisher",
]
disallow_untyped_defs = true

[tool.coverage.run]
source = ["audioflow2mqtt"]

[tool.coverage.report]
show_missing = true
# Floor to guard against regression; the uncovered remainder is mostly the
# socket/network code (app.main, discovery, mqtt_init) that needs a live setup.
fail_under = 45
